2004-02-14  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-ppdfile.in: Accept "-t <type>" option and ignore it,
	  for compatibility with the former "foomatic-datafile".

2004-01-24  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.1rc2. 
	  Tag name: "foomatic-db-engine-3_0_1rc2".

	* README, USAGE: Updated for version 3.0.1rc2.

2004-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Eliminated warnings which appeared since
	  the insertion of "use strict;". Thanks to the hint from
	  Marcelo Ricardo Leitner (mrl at conectiva dot com dot br).

2004-01-22  Tim Waugh  <twaugh@redhat.com>

	* lib/Foomatic/DB.pm (perltoxml): New function.

2003-12-19  Till Kamppeter <till.kamppeter@gmx.net>

	* configure.in, Makefile.in, 
	  foomatic-printermap-to-gimp-print-xml.in: Added script to
	  update the driver entry of GIMP-Print with the printer list
	  of the src/foomatic/foomatic-printermap file of the
	  GIMP-Print source tarball (GIMP-Print 4.2.x or later).

	* Makefile.in: Make mkinstalldirs executable (Thanks to Florian
	  Diesch <diesch@spamfence.net>).

	* Makefile.in: Removed $(DESTDIR) from "make" calls for the Perl
	  libraries (Thanks to Florian Diesch <diesch@spamfence.net>).

2003-12-17  Tim Waugh <twaugh@redhat.com>
 
	* Makefile.in: Use relative symlink, not absolute.

2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged all files of the repository with "foomatic-3_0-bp",
	  started stable branch "foomatic-3_0-branch".
	
2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Added section that CUPS raster drivers can now be used
	  with every spooler.

2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.1rc1. 
	  Tag name: "foomatic-db-engine-3_0_1rc1".

	* README, USAGE: Updated for version 3.0.1rc1.
	
2003-11-19  Till Kamppeter <till.kamppeter@gmx.net>
